Added auth and register api
